--- a/src/app/pages/modulo-reporteflujo/modulo-reportesflujo.component.html
+++ b/src/app/pages/modulo-reporteflujo/modulo-reportesflujo.component.html
@@ -20,6 +20,4 @@
             </nz-select>
         </div>
 </div>
-
-
-
+<iframe src="http://localhost:5488/public-templates?access_token=cd4e42b4-f0b0-4e62-9d73-0f2926f9aaf5" frameborder="0" width="100%" height="600"></iframe>
